feat: update pet with form data
