# backend/docs/swagger.json
@@ -86,8 +86,8 @@
                             "$ref": "#/definitions/rr.JSONResponse"
                         }
                     },
-                    "405": {
-                        "description": "Method Not Allowed",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/rr.JSONResponse"
                         }
@@ -104,15 +104,18 @@
                     "type": "integer"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "cat"
                 }
             }
         },
         "entities.Pet": {
             "type": "object",
             "required": [
+                "category",
                 "name",
-                "photoUrls"
+                "photoUrls",
+                "status"
             ],
             "properties": {
                 "category": {
@@ -151,7 +154,8 @@
                     "type": "integer"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "fluffy"
                 }
             }
         },
